@@ -9,7 +9,7 @@
 - [Acknowledgments](#Acknowledgments)
 
 ## General
-"The Mad Otter" is a rougelike game based on "The Binding of Isaac" mechanics. As befits rougelike games, the game is very difficult. The game was created to:
+"The Mad Otter" is a roguelike game based on "The Binding of Isaac" mechanics. As befits roguelike games, the game is very difficult. The game was created to:
 - better understanding of the JavaFX library
 - get better acquainted with the idea of object-oriented programming (creating a simple game engine)
 - experiment with mechanics based on simple RNG
@@ -32,14 +32,8 @@ The game contains many interesting mechanics such as:
 ![screenshot1](https://github.com/dkwapisz/TheMadOtter/blob/TheMadOtter_Old/src/graphics/image1.png)
 ![screenshot2](https://github.com/dkwapisz/TheMadOtter/blob/TheMadOtter_Old/src/graphics/image2.png)
 
-## How to open 
-### IntelliJ IDEA
-1. File -> Project Structure -> Libraries -> Add (+) -> javafx-sdk-15.0.1/lib -> OK
-2. File -> Project Structure -> Modules -> lib -> OK
-3. Run -> Edit configuration -> VM options:
-
-Windows: ``` --module-path "..\TheGame\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml ```  
-Linux: ``` --module-path ../TheGame/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml ```
+## How to open
+Run via Maven CLI: `mvn clean javafx:run`
 
 ## Acknowledgments
 - Project was created in cooperation with [Maksymilian Kowalik](https://github.com/kowaleuro)
